dragonfly/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dragonfly-scheduler-ingress
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dragonfly-scheduler
                port:
                  number: 8002
  tls:
    - hosts:
        - dragonfly-scheduler.elephant-frog.ts.net
